fixes carousel on mobile

--- a/app/app.scss
+++ b/app/app.scss
@@ -341,11 +341,10 @@ nav {
 }
 
 #carousel {
-  // max-width: 600px;
   margin-top: 25px;
   width: 100%;
   max-width: 600px;
-  height: 100%;
+  border: 8px solid white;
 }
 
 // bootstrap overrides
